--- a/src/blocks/stack/style.scss
+++ b/src/blocks/stack/style.scss
@@ -7,7 +7,13 @@
  */
 
 .dsg-stack {
-	// Let WordPress handle sizing natively
+	// Let WordPress handle sizing natively for outer wrapper (alignfull support)
+
+	&__inner {
+		// CRITICAL: Stack container needs full width for alignment properties to work
+		// Without this, the container shrinks to fit content and align-items doesn't apply
+		width: 100%;
+	}
 }
 
 /**
